Fix Scrollbar Design

--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #e3e3e7;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 body {
     font-family: Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     padding: 50px 0;
@@ -282,7 +284,7 @@ p[class^="from-"].emoji::before {
 
     #wrapper {
         width: 100%;
-        height: calc(100vh - 77px);
+        height: 100vh;
         margin: 0;
         -webkit-box-shadow: none;
         box-shadow: none;
@@ -294,21 +296,14 @@ p[class^="from-"].emoji::before {
     }
 
     #imessage {
-        min-height: calc(100vh - 132px);
+        min-height: 100vh;
         max-width: 100%;
-        padding-bottom: 30px;
+        padding-top: 75px;
+        padding-bottom: 95px;
     }
-
-    form {
-        padding: 2px 25px;
-        display: -ms-grid;
-        display: grid;
-        -ms-grid-columns: 1fr 10px 1fr;
-        grid-template-columns: 1fr 1fr;
-        gap: 10px;
-        -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center;
+    #imessage::-webkit-scrollbar-track {
+        margin-top: 66px;
+        margin-bottom: 77px;
     }
 
     #answer_html, .control-group, .controls, #jform_answer {
@@ -319,17 +314,21 @@ p[class^="from-"].emoji::before {
         grid-column-end: 3;
     }
 
-    form button {
-        -ms-grid-row: 2;
-            grid-row-start: 2;
+    #menu{
+        position: fixed;
+        top: 0;
+        width: 100%;
+        left: 0;
+        background-color: #fff;
+        z-index: 999;
     }
-
     .chatbot-footer{
         position: fixed;
         width: 100%;
         bottom: 0;
         left: 0;
         background-color: #fff;
+        z-index: 999;
     }
 }
 
